--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
 			<version>3.0.3</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>1.2.0</version>
+            <optional>true</optional>
+        </dependency>
 	</dependencies>
 </project>
